create lab3 files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.cpp": "cpp",
         "cstdio": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "thread": "cpp"
     }
 }
